Task-04/main.tf
#Creating Subnets (PUB & Pvt)
resource "aws_subnet" "public" {
        vpc_id                  = aws_vpc.main.id
        cidr_block              = var.public_subnet_cidr
        availability_zone       = var.availability_zone
        map_public_ip_on_launch = true

        tags = {
          Name        = "public-subnet"
          Environment = var.environment
        }
      }

      resource "aws_subnet" "private" {
        vpc_id            = aws_vpc.main.id
        cidr_block        = var.private_subnet_cidr
        availability_zone = var.availability_zone

        tags = {
          Name        = "private-subnet"
          Environment = var.environment
        }
      }

# Creating Route Table 
      resource "aws_route_table" "main" {
        vpc_id = aws_vpc.main.id

        tags = {
          Name        = "main-route-table"
          Environment = var.environment
        }
      }
    
    # Creating Route Table Assoociations 
     resource "aws_route_table_association" "public" {
        subnet_id      = aws_subnet.public.id
        route_table_id = aws_route_table.main.id
      }

      resource "aws_route_table_association" "private" {
        subnet_id      = aws_subnet.private.id
        route_table_id = aws_route_table.main.id
      }

      # Creating Security group 

   resource "aws_security_group" "example" {
      name        = "example-security-group"
      description = "Example security group for our VPC"
      vpc_id      = aws_vpc.main.id

      revoke_rules_on_delete = true

      tags = {
        Name        = "example-security-group"
        Environment = var.environment
      }
    }

    resource "aws_security_group_rule" "allow_http" {
      type              = "ingress"
      from_port         = 80
      to_port           = 80
      protocol          = "tcp"
      cidr_blocks       = ["0.0.0.0/0"]
      security_group_id = aws_security_group.example.id
      description       = "Allow HTTP (80)"
    }

    resource "aws_security_group_rule" "allow_https" {
      type              = "ingress"
      from_port         = 443
      to_port           = 443
      protocol          = "tcp"
      cidr_blocks       = ["0.0.0.0/0"]
      security_group_id = aws_security_group.example.id
      description       = "Allow HTTPS (443)"
    }

    resource "aws_security_group_rule" "egress_all" {
      type              = "egress"
      from_port         = 0
      to_port           = 0
      protocol          = "-1"
      cidr_blocks       = ["0.0.0.0/0"]
      security_group_id = aws_security_group.example.id
      description       = "Allow all outbound traffic"
    }
